Bug 254507 - Address bar does not instantly adapt to font changes
Summary: Address bar does not instantly adapt to font changes
Status: RESOLVED FIXED
Alias: None
Product: kfile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-10-17 23:26 UTC by Kai Uwe Broulik
Modified: 2010-11-12 02:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2010-10-17 23:26:25 UTC
Version:           unspecified (using KDE 4.5.2) 
OS:                Linux

I just encountered the system settings font reverting Bug 254430.
I noticed that dolphin‘s address bar did not adapt to the font when I restored my font settings to my settings. Neither breadcrumb bar nor the input field adapted. All other entries (folder names, toolbars) instantly adapted to the changed font. I had to restart dolphin for the changes to take effect.

Reproducible: Didn't try
Comment 1 Christoph Feck 2010-11-12 02:43:26 UTC
SVN commit 1195822 by cfeck:

Fix font handling

Do not use setFont() on widget to render bold text, this
breaks changing application fonts by user.

BUG: 254507


 M  +0 -3      kurlnavigator.cpp  
 M  +12 -8     kurlnavigatorbutton.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1195822