Fix font handling

Do not use setFont() on widget to render bold text, this
breaks changing application fonts by user.

BUG: 254507

svn path=/trunk/KDE/kdelibs/; revision=1195822